--- a/StoryboardPratices/Podfile
+++ b/StoryboardPratices/Podfile
@@ -9,5 +9,6 @@ target 'StoryboardPratices' do
 pod 'Firebase/Analytics'
 pod 'Firebase/Auth'  
 pod 'Firebase/Core'  
-pod 'Firebase/Firestore'  
+pod 'Firebase/Firestore'
+pod 'FirebaseFirestoreSwift'
 end
